--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-render-html": "^0.6.0",
     "react-share": "^4.4.1"
   },
   "devDependencies": {
