--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "daisyui": "^2.42.1",
     "next": "13.0.6",
     "react": "18.2.0",
