serverSide rendering done

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.19.1",
     "axios": "^1.2.1",
     "daisyui": "^2.42.1",
     "next": "13.0.6",
