--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-render-html": "^0.6.0",
-    "react-share": "^4.4.1"
+    "react-share": "^4.4.1",
+    "swr": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
